[gd_scene load_steps=4 format=3 uid="uid://ckvaugmsk6cqf"]

[ext_resource type="Script" path="res://Other/ClickeableArea.gd" id="1_04iw0"]
[ext_resource type="Texture2D" uid="uid://bx7e7ocukimnj" path="res://Other/icon.svg" id="1_51y27"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0b41u"]
size = Vector2(164.25, 164)

[node name="Node2D" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(215, 166)
script = ExtResource("1_04iw0")
scaleSize = 0.73

[node name="ClickeableArea" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_0b41u")

[node name="Icon" type="Sprite2D" parent="Area2D/ClickeableArea"]
texture = ExtResource("1_51y27")

[node name="Timer" type="Timer" parent="Area2D"]
autostart = true

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(921, 190)
script = ExtResource("1_04iw0")
scaleSize = 5.08

[node name="ClickeableArea" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_0b41u")

[node name="Icon" type="Sprite2D" parent="Area2D2/ClickeableArea"]
texture = ExtResource("1_51y27")

[node name="Timer" type="Timer" parent="Area2D2"]
autostart = true

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2(537, 463)
script = ExtResource("1_04iw0")
scaleSize = 2.945

[node name="ClickeableArea" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource("RectangleShape2D_0b41u")

[node name="Icon" type="Sprite2D" parent="Area2D3/ClickeableArea"]
texture = ExtResource("1_51y27")

[node name="Timer" type="Timer" parent="Area2D3"]
autostart = true

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
[connection signal="timeout" from="Area2D/Timer" to="Area2D" method="_on_timer_timeout"]
[connection signal="input_event" from="Area2D2" to="Area2D2" method="_on_input_event"]
[connection signal="timeout" from="Area2D2/Timer" to="Area2D2" method="_on_timer_timeout"]
[connection signal="input_event" from="Area2D3" to="Area2D3" method="_on_input_event"]
[connection signal="timeout" from="Area2D3/Timer" to="Area2D3" method="_on_timer_timeout"]
